2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* inputOnly.0.png:
	* outputOnly.0.png:
	* OutlineTreeData.h:
	* inputOutput.0.0.png:
	* inputOutput.0.2.png:
	* inputOutput.0.1.png:
	* inputOutput.1.0.png:
	* OutlineUserData.h:
	* OutlineSelection.h:
	* OutlineTreeData.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineUserData.h:
	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineRouteGraph.h:
	* OutlineRouteGraph.cpp: 

2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* node.1.1.png:
	* node.1.0.png:
	* node.0.0.png:
	* node.0.1.png:
	* BrowserWindow.cpp:
	* X3DOutlineTreeView.h:
	* OutlineTreeObserver.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp: 

2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* OutlineRouteGraph.h:
	* X3DOutlineTreeView.h:
	* OutlineTreeObserver.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.cpp: 

2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineRouteGraph.h:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp: 

2013-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineRouteGraph.cpp: 

2013-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineRouteGraph.h:
	* OutlineRouteGraph.cpp: 

2013-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* X3DUserInterface.cpp:
	* X3DBrowserWidget.cpp:
	* OutlineEditor.h:
	* initializeOnly.png:
	* OutlineTreeData.h:
	* OutlineUserData.h:
	* OutlineTreeModel.h:
	* OutlineRouteGraph.h:
	* OutlineTreeData.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.h:
	* OutlineRouteGraph.cpp: